src/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --color1: #fbe2e3;
  --color2: #946263;
  --color3: #dbd7fb;
  --color4: #676394;
}

header {
    display: flex;
    align-items: center;
    padding: 1rem;
    border-bottom: 1px solid #000000;
}

.headerlink-navigation {
  display: flex;
  list-style: none;
}

.headerlink {
    text-decoration: none;
    color: #000000;
    font-size: 1.5rem;
    font-weight: bold;
    margin-left: 1rem;
}

#gatsby-focus-wrapper > header > nav > ul > li:nth-child(1) > a {
  margin-left: 0;
}

.headerlink:hover {
    color: #f83939;
}

.headerlink:active {
    color: #a72525;
}

footer {
  display: flex;
  /* justify-content: center; */
  align-items: center;
  padding: 1rem;
  font-size: 1.5rem;
  font-weight: bold;
  border-top: 1px solid #000000;
}

body {
  font-family: 'system-ui', sans-serif;
}

.portfolioh2 {
  padding: 1rem 1rem 0;
  text-align: center;
}

.kurslistan {
  list-style-type: none;
  /* background-color: red; */
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  padding: 0 1rem;
}

.kursamne {
  display: flex;
  max-width: 600px;
  padding: 2rem;
  margin: .5rem;
  background-color: aliceblue;
  border-radius: 6rem;
}

.ph2text_container {
  display: flex;
  flex-direction: column;
  padding: 1rem 0;
  text-decoration: none;
  color: #000000;
  justify-content: space-between;
}

.kurstitel {
  font-size: 1.5rem;
  margin-bottom: 0.3rem;
}

/* Kurs bilder */
#gatsby-focus-wrapper > main > ul > li > div > picture > img {
  height: 100%;
  /* width: 100%; */
  object-fit: cover;
  border-radius: 4rem;
}

/* Sektioner */
.section {
  width: 60%;
  margin: 2rem auto;
  min-height: 30rem;
  position: relative;
}

.gradient-background-1 {
  background-color: var(--color1);
  position: absolute;
  top: -6rem;
  right: 11rem;
  z-index: -10;
  height: 31.25rem;
  width: 31.25rem;
  border-radius: 50%;
  filter: blur(10rem);
  @media (min-width: 640px) {
    width: 68.75rem;
  }
}

.gradient-background-3 {
  background-color: var(--color3);
  position: absolute;
  top: -1rem;
  right: -35rem;
  z-index: -10;
  height: 31.25rem;
  width: 50rem;
  border-radius: 50%;
  filter: blur(10rem);
  @media (min-width: 640px) {
    width: 68.75rem;
  }
  @media (min-width: 768px) {
    right: -33rem;
  }
  @media (min-width: 1024px) {
    right: -28rem;
  }
  @media (min-width: 1280px) {
    right: -15rem;
  }
  @media (min-width: 1536px) {
    right: -5rem;
  }
}

.GHCL {
  height: 35rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.GitHubContributionsLines {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  padding: 1rem;
  border-top: 1px solid #000000;
  border-bottom: 1px solid #000000;
  height: 40%;
}

.GitHubContributionsLines > p:nth-child(2) {
  font-size: 1.5rem;
  font-weight: bold;
  margin-top: 2rem;
  text-align: center;
}

.GitHubContributionsLines > p:nth-child(3) {
  font-style: italic;
  text-align: center;
}

.adderade {
  font-size: 2rem;
}

.intro-pic {
  height: 6rem;
  width: 6rem;
  border-radius: 50%;
  object-fit: cover;
  border: 0.35rem solid #fff;
  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
}

